--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,29 @@
 <!-- <button (click)="snapshot()" type="button">Start Streaming</button>  -->
-<h3>Expression Analysis</h3>
+<div class="col-xs-12">
+	<h3>Expression Analysis</h3>
+	<div class="col-xs-12">
+		<button class="btn btn-primary col-xs-4" (click)="startVideoCapture()" type="button">Start Capture</button> 
+		<button class="btn btn-primary col-xs-4" (click)="stopRecording()" type="button">Stop Capture</button> 
+		<button class="btn btn-primary col-xs-4" (click)="analyzeVideo()" type="button">Analyze</button> 
+	</div>
+	<div class="analysis-status" *ngIf="analysisInProgress">
+		Analysis in progress... Please Wait...
+		<div *ngFor="let status of analysisStatus">
+			{{status}}
+		</div>
+	</div>
+	<div class="analysis-results" *ngIf="analysisCompleted && analysisResult">
+		<h4>Analysis Results </h4> 
+		<br>Anger : {{analysisResult.anger}}
+		<br>Contempt : {{analysisResult.contempt}}
+		<br>Disgust : {{analysisResult.disgust}}
+		<br>Fear : {{analysisResult.fear}}
+		<br>Happiness : {{analysisResult.happiness}}
+		<br>Neutral : {{analysisResult.neutral}}
+		<br>Sadness : {{analysisResult.sadness}}
+		<br>Surprise : {{analysisResult.surprise}}
+	</div>
+</div>
 <div class="col-xs-12 video-content">
 	<video width="100%" height="auto" autoplay controls>
 	  
@@ -8,24 +32,3 @@
 <!-- <img src="">
 <canvas style="display:none;"></canvas>
 <a></a> -->
-<div class="col-xs-12">
-	<button class="btn btn-primary col-xs-4" (click)="startVideoCapture()" type="button">Start Capturing</button> 
-	<button class="btn btn-primary col-xs-4" (click)="stopRecording()" type="button">Stop Capturing</button> 
-	<button class="btn btn-primary col-xs-4" (click)="analyzeVideo()" type="button">Analyze Video</button> 
-</div>
-<div class="analysis-status" *ngIf="analysisInProgress">
-	Analysis in progress... Please Wait...
-	<div *ngFor="let status of analysisStatus">
-		{{status}}
-	</div>
-</div>
-<div class="analysis-results" *ngIf="analysisCompleted && analysisResult">Results - 
-	<br>Anger : {{analysisResult.anger}}
-	<br>Contempt : {{analysisResult.contempt}}
-	<br>Disgust : {{analysisResult.disgust}}
-	<br>Fear : {{analysisResult.fear}}
-	<br>Happiness : {{analysisResult.happiness}}
-	<br>Neutral : {{analysisResult.neutral}}
-	<br>Sadness : {{analysisResult.sadness}}
-	<br>Surprise : {{analysisResult.surprise}}
-</div>
