--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -3,6 +3,10 @@
   padding:20px;
   float:left;
   color:cornflowerblue;
+  >div{
+    padding:0;
+    margin-bottom:10px;
+  }
   .video-content{
     border: 1px dotted grey;
     border-radius : 4px;
@@ -20,5 +24,12 @@
     width: 100%;
     text-align: left;
     padding: 15px;
+  }
+  .btn{
+    padding-left:0;
+    padding-right:0;
+  }
+  .btn+.btn{
+    margin-left:4.165%;
   }
 }
