updated gh pages

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -14,14 +14,14 @@
 	</div>
 	<div class="analysis-results" *ngIf="analysisCompleted && analysisResult">
 		<h4>Analysis Results </h4> 
-		<br>Anger : {{analysisResult.anger}}
-		<br>Contempt : {{analysisResult.contempt}}
-		<br>Disgust : {{analysisResult.disgust}}
-		<br>Fear : {{analysisResult.fear}}
-		<br>Happiness : {{analysisResult.happiness}}
-		<br>Neutral : {{analysisResult.neutral}}
-		<br>Sadness : {{analysisResult.sadness}}
-		<br>Surprise : {{analysisResult.surprise}}
+		<br>Anger 		: {{analysisResult.anger}}%
+		<br>Contempt 	: {{analysisResult.contempt}}%
+		<br>Disgust 	: {{analysisResult.disgust}}%
+		<br>Fear 		: {{analysisResult.fear}}%
+		<br>Happiness 	: {{analysisResult.happiness}}%
+		<br>Neutral 	: {{analysisResult.neutral}}%
+		<br>Sadness 	: {{analysisResult.sadness}}%
+		<br>Surprise 	: {{analysisResult.surprise}}%
 	</div>
 </div>
 <div class="col-xs-12 video-content">
