--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -12,6 +12,7 @@
     border-radius : 4px;
     padding:5px;
     margin-bottom:10px;
+    max-width:600px;
   }
   .analysis-results{
     float: left;
